--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #fff;
+}
+
 .yellow {
     background-color: #F4A100;
 }
@@ -39,10 +43,81 @@ img {
     justify-content: center;
     align-items: center;
     border-radius: 10px 0 0 10px;
+    z-index: 100;
+    background-color: #fff !important;
 }
 
 .gif-div img {
     width: 22px;
+}
+
+.theme-body {
+    width: 90%;
+    margin: auto;
+}
+
+.theme-color {
+    padding: 15px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.theme-color p {
+    margin-bottom: 0;
+}
+
+
+/*====== NAVBAR ============*/
+
+.nav-link {
+    font-size: 18px;
+}
+
+.navbar .dropdown-menu {
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)!important;
+}
+
+.navbar .dropdown-menu a {
+    font-size: 15px;
+    padding: 3px 0 !important;
+    text-decoration: none;
+    color: rgb(88, 88, 88);
+    display: block;
+}
+
+.navbar .dropdown-menu {
+    min-width: 20rem !important;
+    border: 0 !important;
+    margin-bottom: 10px;
+}
+
+.navbar .dropdown-menu h6 {
+    font-size: 16px;
+    margin: 8px 0 !important;
+}
+
+.document-div {
+    display: flex;
+    align-items: center;
+}
+
+.doc-head {
+    line-height: 5px;
+}
+
+.doc-icon-div {
+    background-color: #c2d8fa;
+    color: #0061F2;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.doc-content-div {
+    margin-left: 10px;
 }
 
 
@@ -61,6 +136,11 @@ img {
     max-width: 250px;
 }
 
+.header-subhead {
+    font-size: 20px;
+    color: rgb(133, 133, 133);
+}
+
 
 /*===== Services =======*/
 
@@ -68,7 +148,7 @@ img {
     background-color: #F2F6FC;
 }
 
-.services-container {}
+.service-div {}
 
 .circle {
     height: 100px;
@@ -230,5 +310,8 @@ img {
     }
     .footer-container {
         padding: 0 20px !important;
+    }
+    .navbar .dropdown-menu {
+        max-width: 90vw !important;
     }
 }
