--- a/bootstrap.css
+++ b/bootstrap.css
@@ -3707,7 +3707,7 @@ fieldset:disabled .btn {
     position: absolute;
     z-index: 1000;
     display: none;
-    min-width: 10rem;
+    /*min-width: 10rem;*/
     padding: .5rem 0;
     margin: 0;
     font-size: 1rem;
